# axa

./: .gitignore  COPYRIGHT  Doxyfile.in  Makefile.am  README.md  configure.ac  copyright  fwd.man  json-schema.yaml  memcheck.supp  radwatch.man  srawatch.man  watch.man
axa/: README  axa.h  axa_endian.h  bit_funcs.h  bits.h  client.h  client_config.h  dns_walk.h  fields.h  json.h  kickfile.h  libaxa.pc.in  mdb.h  open_nmsg_out.h  protocol.h  rad_mod.h  socket.h  strbuf.h  trie.h  version.h.in  wire.h  yajl_shortcuts.h
axalib/: README  apikey.c  bit_funcs.c  client.c  client_config.c  dns_walk.c  domain_to_str.c  emsg.c  fields.c  get_field_name.c  hash_divisor.c  json.c  kickfile.c  mdb.c  open_nmsg_out.c  parse_ch.c  socket.c  strbuf.c  time.c  tls.c  trie.c  version.c  wdns_res.c  wdns_rtype.c  whit2nmsg.c  wire.c
cert_tools/: axa_link_certs.in  axa_link_certs.man.in  axa_make_cert.in  axa_make_cert.man.in  axa_server_cert.man.in
debian/: .gitignore  axa-tools.install  changelog  control  copyright  gbp.conf  libaxa-dev.install  libaxa0.install  libaxa1.symbols  libaxa3.symbols  rules
doc/doxygen/: Doxyfile.in
etc/: .gitignore  fields  link_certs.sh.in  make_cert.sh.in
libmy/: b64_encode.c
m4/: compile_check.m4  doxygen.m4  libedit.m4
sratool/: .gitignore  README  axa_link_certs.in  axa_link_certs.man.in  axa_make_cert.in  axa_make_cert.man.in  axa_server_cert.in  axa_server_cert.man.in  cmd.c  cmds.man  error.c  infile.c  io.c  main.c  options.man  options.man.in  output.c  print.c  radtool.man  radtool.man.in  server.c  signal.c  sratool.h  sratool.man  sratool.man.in  time.c
sratunnel/: .gitignore  README  forward.c  main.c  output.c  pidfile.c  print.c  radtunnel.man.in  server.c  signal.c  sratunnel.h  sratunnel.man  sratunnel.man.in
tests/: test-apikey.c  test-client_config.c  test-config  test-config-badperms.in  test-config.in  test-json.c  test-kickfile.c  test-kill.c  test-mdb-cmp-function.c  test-mgmt.c  test-radtool-without-server.sh.in  test-stats.c  test-tools-with-server.sh.in  test-tools-without-server.sh.in
tests/tool-tests-data/: 001010-multiple-commands-on-single-line  002000-multiple-commands  002100-unrecognized-command  002200-valid-then-unrecognized-command  002210-valid-before-and-after-unrecognized-command
tests/tool-tests-data/with-server/: 001000-connect  001010-invalid-username  001020-list  001030-set-watch  001040-watch-invalid-channel  001050-watch-channel  001060-watch-dns
tools/: axa_link_certs.man.in  axa_make_cert.man.in  axa_server_cert.man.in  axa_tsindextool.c  axa_tsindextool.man.in
